--- a/src/styles/_contentmodal.scss
+++ b/src/styles/_contentmodal.scss
@@ -45,13 +45,13 @@
 }
 
 .content-modal-about {
-    padding: 10px;
+    padding: 10px !important;
     width: 95%;
     height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    font-weight: 300;
+    // justify-content: space-evenly;
+    overflow-y: scroll;
 
     @media only screen and (min-width: $bp-medium-1){
         width: 58%;
@@ -61,11 +61,10 @@
 }
 
 .content-modal-title {
-    height: 12%;
+    // height: 12%;
     font-size: 5vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    margin-bottom: 15px;
 
     @media only screen and (min-width: $bp-medium-1){
         font-size: 3.5vw;
@@ -74,11 +73,9 @@
 
 .content-modal-description {
     display: flex;
-    height: 40%;
-    overflow-y: scroll;
+    height: 100%;
     padding: 15px;
     border-radius: 20px;
-    scrollbar-width: thin; /* Firefox */
     box-shadow: inset 0 0 5px #000000;
     text-align: justify;
 
@@ -87,6 +84,6 @@
     }
 }
 
-.content-modal-description::-webkit-scrollbar {
-    display: none;
+.trailer-title {
+    padding: 5px 0;
 }
