modal shifted to its own component

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -58,5 +58,5 @@ body {
 @import './custompagination';
 @import './genres';
 @import './search';
-@import './contentmodal';
+@import './modalcontent';
 @import './trailer';
