--- a/src/styles/_modalcontent.scss
+++ b/src/styles/_modalcontent.scss
@@ -21,6 +21,7 @@
 
 .tagline {
     padding-bottom: 10px;
+    color: #fff ;
     align-self: center;
 }
 
@@ -50,7 +51,6 @@
     height: 90%;
     display: flex;
     flex-direction: column;
-    // justify-content: space-evenly;
     overflow-y: scroll;
 
     @media only screen and (min-width: $bp-medium-1){
@@ -65,6 +65,7 @@
     font-size: 5vw;
     text-align: center;
     margin-bottom: 15px;
+    color: #fff ;
 
     @media only screen and (min-width: $bp-medium-1){
         font-size: 3.5vw;
@@ -78,6 +79,7 @@
     border-radius: 20px;
     box-shadow: inset 0 0 5px #000000;
     text-align: justify;
+    color: #fff ;
 
     @media only screen and (min-width: $bp-medium-1){
         font-size: 22px;
