--- a/src/styles/_trailer.scss
+++ b/src/styles/_trailer.scss
@@ -1,13 +1,12 @@
 .trailer {
-    @media only screen and (max-width: $bp-medium-1){
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .trailer-title {
     padding: 5px 0;
+    color: #fff ;
 }
 
 .trailer-video {
