--- a/src/styles/_modalcontent.scss
+++ b/src/styles/_modalcontent.scss
@@ -53,6 +53,16 @@
     flex-direction: column;
     overflow-y: scroll;
 
+    &::-webkit-scrollbar {
+        width: .3rem;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #333;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: #ccc;
+    }
+
     @media only screen and (min-width: $bp-medium-1){
         width: 58%;
         padding: 0;
@@ -74,7 +84,6 @@
 
 .content-modal-description {
     display: flex;
-    height: 100%;
     padding: 15px;
     border-radius: 20px;
     box-shadow: inset 0 0 5px #000000;
