--- a/src/styles/_modalcontent.scss
+++ b/src/styles/_modalcontent.scss
@@ -37,7 +37,7 @@
     @media only screen and (min-width: $bp-medium-1){
         flex-direction: row;
         justify-content: space-around;
-        padding: 10px 0;
+        padding: 10px 0 0 0 !important;
     }
 }
 
