--- a/src/styles/_modalcontent.scss
+++ b/src/styles/_modalcontent.scss
@@ -2,6 +2,7 @@
 .content-modal-landscape {
     object-fit: contain;
     border-radius: 10px;
+    margin-bottom: 10px;
 
     @media only screen and (min-width: $bp-medium-1){
         display: none;
