--- a/src/styles/_trailer.scss
+++ b/src/styles/_trailer.scss
@@ -22,7 +22,7 @@
     }
 
     @media only screen and (max-width: $bp-medium-1){
-        width: 560px;
-        height: 315px;
+        width: 100%;
+        // height: 315px;
     }
 }
